--- a/angular.json
+++ b/angular.json
@@ -21,7 +21,9 @@
             ],
             "styles": [
               "node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/assets/CSS/roboto.css",
+              "src/assets/CSS/material-icons/material-icons.css"
             ],
             "scripts": [],
             "customWebpackConfig": {
