--- a/package.json
+++ b/package.json
@@ -95,7 +95,8 @@
   "dependencies": {
     "@angular/animations": "^9.0.0 || ^10.0.0-0",
     "@angular/cdk": "9.2.0",
-    "@angular/forms": "^9.0.0 || ^10.0.0-0",
-    "@angular/material": "9.2.0"
+    "@angular/material": "9.2.0",
+    "angular-plotly.js": "2.0.0",
+    "plotly.js": "1.53.0"
   }
 }
