--- a/package.json
+++ b/package.json
@@ -82,8 +82,8 @@
     "npm-run-all": "4.1.5",
     "rxjs": "6.5.4",
     "spectron": "10.0.1",
-    "tslib": "1.10.0",
     "ts-node": "8.3.0",
+    "tslib": "1.10.0",
     "typescript": "3.7.5",
     "wait-on": "4.0.0",
     "webdriver-manager": "12.1.7",
@@ -95,7 +95,8 @@
   "dependencies": {
     "@angular/animations": "^9.0.0 || ^10.0.0-0",
     "@angular/cdk": "9.2.0",
-    "@angular/forms": "^9.0.0 || ^10.0.0-0",
-    "@angular/material": "9.2.0"
+    "@angular/material": "9.2.0",
+    "angular-plotly.js": "2.0.0",
+    "plotly.js": "1.53.0"
   }
 }
